fix(docs): keep horz overflow for large code blocks
Related: https://github.com/pluralsight/design-system/commit/b9dde7515e7262244d1a7f3c857329115db2baf1

--- a/docs/src/components/frame/frame.module.css
+++ b/docs/src/components/frame/frame.module.css
@@ -55,6 +55,7 @@
 }
 
 .main {
+  overflow-x: auto;
   flex: 0 1 auto;
   margin: 0 auto;
   max-width: 1000px;
